--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
      <div class="home-container"> 
          <h1>Welcome!</h1> 
          <br><br><br> 
-         <h2>这里是曹倩的主页</h2> 
+         <h2>这里是付宇的主页</h2> 
          <br><br> 
          <p>一个学习中的后端开发者,正在努力学习后端知识,为将来的高薪生活做准备~</p> 
      </div> 
