--- a/index.html
+++ b/index.html
@@ -1,53 +1,14 @@
-<!DOCTYPE html> 
- <html lang="CN-ch"> 
-  
- <head> 
-     <meta charset="UTF-8"> 
-     <title>个人简历</title> 
-     <link rel="icon" href="images/csdn.ico"> 
-     <link rel="stylesheet" href="css/all.css"> 
- </head> 
-  
- <body> 
- <!--导航栏--> 
- <header> 
-     <div class="nav-bar"> 
-         <div class="navigation"> 
-             <div class="nav-items"> 
-                 <a class="active" href="index.html">主页</a> 
-                 <a href="webpages/inform.html">个人信息</a> 
-                 <a href="webpages/skill.html">专业技能</a> 
-                 <a href="webpages/project.html">项目经历</a> 
-                 <a href="webpages/contact.html">联系方式</a> 
-             </div> 
-         </div> 
-     </div> 
- </header> 
- <!--主页内容--> 
- <div id="home"> 
-     <div class="home-container"> 
-         <h1>Welcome!</h1> 
-         <br><br><br> 
-         <h2>这里是付宇的主页</h2> 
-         <br><br> 
-         <p>一个学习中的后端开发者,正在努力学习后端知识,为将来的高薪生活做准备~</p> 
-     </div> 
- </div> 
-  
- <!-- 底部 --> 
- <footer> 
-     <div class="footer-container"> 
-         <div class="info"> 
-             <h3>常用链接</h3> 
-             <ul> 
-                 <li><a href="https://github.com/" target="_blank">GitHub</a></li> 
-                 <li><a href="https://blog.csdn.net/" target="_blank">CSDN</a></li> 
-                 <li><a href="https://leetcode-cn.com/" target="_blank">LeetCode</a></li> 
-                 <li><a href="https://www.cnblogs.com/" target="_blank">博客园</a></li> 
-             </ul> 
-         </div> 
-     </div> 
- </footer> 
- </body> 
-  
-          </html>
+<!doctype html><html xmlns="http://www.w3.org/1999/xhtml"><head><meta charset="UTF-8"><meta http-equiv="pragma" content="no-cache"><meta http-equiv="cache-control" content="no-cache"><meta name="applicable-device" content="mobile"><meta name="renderer" content="webkit"><meta name="force-rendering" content="webkit"><meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1"><meta http-equiv="Content-Type" content="text/html; charset=utf-8"><meta name="viewport" content="width=device-width,initial-scale=1,minimum-scale=1,maximum-scale=1,user-scalable=no,viewport-fit=cover"><meta name="Copyright" content="miHoYo"><meta name="format-detection" content="telephone=no"><meta name="format-detection" content="email=no"/><meta name="apple-mobile-web-app-capable" content="yes"><meta name="apple-mobile-web-status-bar-style" content="black-translucent"><meta http-equiv="X-UA-Compatible" content="IE=edge"><title>《原神》官方网站-全新4.0版本 「仿若无因飘落的轻雨」上线！</title><link id="icon" rel="shortcut icon" href="https://ys.mihoyo.com/main/favicon.ico"/><meta name="Description" content="全新4.0版本 「仿若无因飘落的轻雨」现已推出！《原神》是由米哈游自研的一款开放世界冒险RPG。你将在游戏中探索一个被称作「提瓦特」的幻想世界。在这广阔的世界中，你可以踏遍七国，邂逅性格各异、能力独特的同伴，与他们一同对抗强敌，踏上寻回血亲之路；也可以不带目的地漫游，沉浸在充满生机的世界里，让好奇心驱使自己发掘各个角落的奥秘……直到你与分离的血亲重聚，在终点见证一切事物的沉淀。"><meta name="Keywords" content="原神, 原神新版本, 原神电脑版, 原神完整版,原神最新版, 原神官网, 原神PC官网, 原神PC端, 原神PC端官网, 原神下载, 原神攻略, 原神PC版, 原神PC下载, 原神手游, 原神ios, 原神官服,原神官方, 原神游戏, 原神安卓, 原神米哈游, 原神手游官网, 原神官方, 原神手游ios, 原神漫画, 原神开放世界, yuanshen官网,原神新地图,原神新区域,原神角色,原神新角色,原神新剧情,原神新武器,原神新活动,原神版本更新"><script defer="defer" src="https://act.mihoyo.com/puzzle/hk4e/pz_nfPSjub8Eb/config.020d6a06d976e592526fe878b887053c.js"></script><script defer="defer" src="https://act.mihoyo.com/puzzle/hk4e/pz_nfPSjub8Eb/main.36dcc373.js"></script><link href="https://act.mihoyo.com/puzzle/hk4e/pz_nfPSjub8Eb/main.6d0891ab.css" rel="stylesheet"></head><body><div id="app"></div><script src="https://webstatic.mihoyo.com/dora/biz/mihoyo-analysis/v2/main.js"></script><script src="https://webstatic.mihoyo.com/dora/lib/vue-sentry/2.6.11/vue.min.js"></script><script>Sentry.init({
+        dsn: 'https://2d2044ee9ba34d41b1deb282529024b0@sentry.mihoyo.com/9',
+        integrations: [
+          new Sentry.Integrations.Vue({Vue: Vue, attachProps: true, logErrors: true}),
+        ],
+        ignoreErrors: [
+          'The play() request was interrupted',
+          'The operation was aborted',
+          '$ is not defined',
+          'mihoyo-event-dialog-cancel',
+          "play() failed because the user didn't interact with the document first",
+          'The play method is not allowed by the user agent or the platform in the current context'
+        ]
+      });</script></body></html>
