--- a/index.html
+++ b/index.html
@@ -1,1 +1,28 @@
-<!doctype html><html lang="zh" dir="ltr"><head><meta name="theme-color" content="#4F4F4F" /><meta name="description" content="必应可帮助你将理论付诸实践，使得搜索更加方便快捷，从而达到事半功倍的效果。" /><meta http-equiv="X-UA-Compatible" content="IE=edge" /><meta name="viewport" content="width=device-width, initial-scale=1.0" /><meta property="fb:app_id" content="570810223073062" /><meta property="og:type" content="website" /><meta property="og:title" content="系好你的安全带！" /><meta property="og:image" content="https://www.bing.com/th?id=OHR.SplugenPass_ZH-CN8347591461_tmb.jpg&amp;rf=" /><meta property="og:image:width" content="1366" /><meta property="og:image:height" content="768" /><meta property="og:url" content="https://www.bing.com/?form=HPFBBK&amp;ssd=20230915_1600&amp;mkt=zh-CN" /><meta property="og:site_name" content="必应" /><meta property="og:description" content="今天的照片展示的是位于勒蓬廷阿尔卑斯山脉上的一条公路线——施布吕根山口。山口位于瑞士和意大利的边境，" /><meta name="apple-itunes-app" content="app-id=345323231, affiliate-data=pt=80423&ct=binghptstflight&mt=8, app-argument=sapphire://sydney?network=12hga57x&campaign=13s0noui&adgroup=" /><title>必应</title><link rel="icon" href="/sa/simg/favicon-trans-bg-blue-mg-png.png" /><link rel="preload" href="https://s.cn.bing.net/th?id=OHR.SplugenPass_ZH-CN8347591461_768x1366.webp&amp;qlt=50" as="image" id="preloadBg" onLoad="var imgCont=document.getElementById('img_cont'); if (imgCont &amp;&amp; imgCont.style) {imgCont.style.display='block';}" /><link rel="preload" href="/rp/ICf9X-WMafiZOnS_3M9RpM8994E.gz.js" as="script"  /><link rel="preload" href="/rp/ICf9X-WMafiZOnS_3M9RpM8994E.gz.js" as="script"  /><link rel="preconnect" href="https://r.bing.com" /><link rel="preconnect" href="https://r.bing.com" crossorigin/><link rel="dns-prefetch" href="https://r.bing.com" /><link rel="dns-prefetch" href="https://r.bing.com" crossorigin/><style type="text/css">@media(max-width:1440px){#id_n{white-space:nowrap;overflow:hidden;text-overflow:ellipsis;max-width:90px;display:inline-block}}.b_dark #id_rbh.serp svg{fill:#a19f9d}body.b_dark #id_rfoc{background-color:#323130;color:#edebe9;box-shadow:none}.rwds_svg{vertical-align:top;display:inline-block}.rwds_svg.mobile{float:left}.rwds_svg.serp{margin:8px 0 0 8px}.rwds_svg.serp.mobile{margin:8px 4px 0 8px}.rwds_svg.hp{margin:5px 4px 0 8px}.rwds_svg.hp.mobile{margin:5px 4px 0 10px}.rhlined,.rhfill{vertical-align:top;width:32px;height:32px}#id_rh,#id_rbh{position:relative}.id_button toolTip:after,#id_rh:after{white-space:pre-line !important;width:200px}.rhcoinflip{vertical-align:top;width:60px;height:60px;position:absolute;right:-6px;top:-6px}#idCont .rhcoinflip{position:absolute;right:-5px;top:-9px}#rh_meter{vertical-align:top;width:40px;height:40px;margin-left:-36px;margin-top:-4px}.rh_reedm .rhlined,.rhfill,.rh_reedm .meter{display:none}.rhlined,.rh_reedm .rhfill,#rh_meter{display:inline-block}.rd_hide{visibility:hidden}.rhlined.hp .meter,.rhfill.hp .meter{stroke:rgba(255,255,255,.4)}.noBg .rhlined.hp .meter,.noBg .rhfill.hp .meter,.rhlined.serp .meter,.rhfill.serp .meter{stroke:rgba(177,177,177,.4)}.rhlined.hp .medal,.rhfill.hp .medal{fill:#fff}.noBg .rhlined.hp .medal,.rhlined.serp .medal{fill:var(--opttxt)}.noBg .rh_reedm .rhfill.hp .medal,.rh_reedm .rhfill.serp .medal{fill:var(--tealcol)}#rh_animcrcl{fill:none;stroke:transparent;stroke-width:0}#rh_animcrcl.anim{stroke-width:2}#rh_animcrcl.anim.hp{stroke:#fff}@media screen and (-ms-high-contrast:black-on-white){.rhlined.hp .medal,.rhfill.hp .medal{fill:#000}#rh_animcrcl.anim.hp{stroke:#000}}#rh_animcrcl.serp.anim{stroke:var(--tealcol)}#rh_animpath.serp.anim{fill:var(--tealcol)}.noBg #rh_animcrcl.anim.hp{stroke:#00809d}.rh_scale .rhfill,.rh_scale #rh_meter{animation:scaling .4s cubic-bezier(.3,.55,.1,1)}@-webkit-keyframes scaling{0%{transform:scale(1,1)}50%{transform:scale(1.3,1.3)}100%{transform:scale(1,1)}}@keyframes scaling{0%{transform:scale(1,1)}50%{transform:scale(1.3,1.3)}100%{transform:scale(1,1)}}#tallhead #idMobileCont{position:absolute}#tallhead #idMobileCont>*{top:3px}#idMobileCont>*{vertical-align:top;display:inline-block;top:10px}#idMobileCont #id_rh,#idMobileCont #id_rbh{font-size:.8125rem;position:relative;margin-top:2px}#idMobileCont #id_rh #id_rc.hp,#idMobileCont #id_rbh #id_rc.hp,#idMobileCont #id_rh #id_rbc.hp,#idMobileCont #id_rbh #id_rbc.hp{color:#fff;line-height:38px}#idMobileCont #id_rh #id_rc.serp,#idMobileCont #id_rbh #id_rc.serp,#idMobileCont #id_rh #id_rbc.serp,#idMobileCont #id_rbh #id_rbc.serp{color:var(--promtxt000);line-height:45px}#id_rbh.hp{padding-right:12px}#id_rbh.hp.reverse{padding-left:8px;padding-right:0}#id_rbh.serp{padding-right:0}#id_rbh.serp.reverse{padding-left:14px}#id_rbh.hp svg{height:30px;fill:white}#id_rbh.serp svg{height:25px;fill:#818285}@media(max-width:1301.9px){#id_h #id_rbh,#idCont #id_h #id_rbh{display:none}#id_rfob,#id_rfoc{display:none !important}}#b_header.bm_oneMap #id_rh.id_button.toolTip.rh_reedm{top:1px}#b_header.bm_oneMap #serp_medal_svg{margin-top:0 !important}#id_rfob{display:none;flex-dir
+
+<IDOCTYPE html> 
+  
+ <html> 
+  
+ <body> 
+  
+ <style> 
+  
+ . box 
+  
+ Width:200px; 
+  
+ hei ght: 100px; 
+  
+ </style> 
+  
+ <h1 align = "center ">mcc</h1> 
+  
+ <h1 align = "center">🌈第一次搭建网站</h1> 
+  
+ <h1 align = "center">🏖风雨客栈©</h1> 
+  
+ <h1 align = "center ">QQ2742329512! </h1> 
+  
+ <a href = "https:/ /www . baidu.com">ch1 align = "center”>点我跳转</body> 
+  
+ </html>
