--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 
-<IDOCTYPE html> 
+<！DOCTYPE html> 
   
- <html> 
+ <html lang="zh-CN">
   
  <body> 
   
@@ -13,16 +13,16 @@
   
  hei ght: 100px; 
   
- </style> 
+ <title>浮云</title>
   
- <h1 align = "center ">mcc</h1> 
+ <h1 align = "center ">我是付宇</h1> 
   
  <h1 align = "center">🌈第一次搭建网站</h1> 
   
- <h1 align = "center">🏖风雨客栈©</h1> 
+ <h1 align = "center">🏖浮云©</h1> 
   
  <h1 align = "center ">QQ2742329512! </h1> 
-  
- <a href = "https:/ /www . baidu.com">ch1 align = "center”>点我跳转</body> 
+ 
+ <a href = "https://fuyu630.github.io/fengyukezhan/”>我的博客</body> 
   
  </html>
