--- a/index.html
+++ b/index.html
@@ -1,106 +1,77 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>AnimeQA - 二次元问答</title>
-    <link href="https://fonts.googleapis.com/css?family=Roboto:400,700" rel="stylesheet">
-    <style>
-        body {
-            font-family: 'Roboto', Arial, sans-serif;
-            background-color: #f9f9f9;
-            margin: 0;
-            padding: 0;
-        }
-
-        .container {
-            max-width: 800px;
-            margin: 20px auto;
-            padding: 20px;
-            background-color: #fff;
-            box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
-            border-radius: 5px;
-        }
-
-        .header {
-            text-align: center;
-            margin-bottom: 30px;
-        }
-
-        h1 {
-            font-size: 36px;
-            margin: 0;
-            color: #333;
-        }
-
-        p {
-            font-size: 18px;
-            line-height: 1.5;
-            color: #666;
-        }
-
-        .question {
-            background-color: #f5f5f5;
-            padding: 15px;
-            border-radius: 5px;
-            margin-bottom: 15px;
-        }
-
-        .question h2 {
-            font-size: 24px;
-            margin: 0;
-            color: #333;
-            margin-bottom: 10px;
-        }
-
-        .question p {
-            font-size: 16px;
-            color: #666;
-        }
-
-        .answer {
-            background-color: #e7f2ff;
-            padding: 15px;
-            border-radius: 5px;
-            margin-bottom: 20px;
-        }
-
-        .answer h2 {
-            font-size: 20px;
-            margin: 0;
-            color: #0056b3;
-            margin-bottom: 10px;
-        }
-
-        .answer p {
-            font-size: 16px;
-            color: #333;
-        }
-    </style>
+    <title>ChatGPT 网站示例</title>
+    <script src="https://cdn.jsdelivr.net/npm/@openai/chatgpt@0.8.2/dist/index.js"></script>
 </head>
 <body>
-    <div class="container">
-        <div class="header">
-            <h1>AnimeQA - 二次元问答</h1>
-        </div>
-
-        <div class="question">
-            <h2>问题标题</h2>
-            <p>问题的详细描述和背景信息。</p>
-        </div>
-
-        <div class="question">
-            <h2>问题标题</h2>
-            <p>问题的详细描述和背景信息。</p>
-        </div>
-
-        <div class="answer">
-            <h2>问题标题</h2>
-            <p>回答的详细内容。</p>
-        </div>
-
-        <div class="answer">
-            <h2>问题标题</h2>
-            <p>回答的详细内容。</p>
-        </div>
+    <div id="chat-container">
+        <div id="chat-log"></div>
+        <input type="text" id="user-input" placeholder="在这里输入您的消息..." />
+        <button id="send-btn">发送</button>
     </div>
+
+    <script>
+        const chatLog = document.querySelector('#chat-log');
+        const userInput = document.querySelector('#user-input');
+        const sendButton = document.querySelector('#send-btn');
+
+        // 创建 ChatGPT 实例
+        const chatgpt = new ChatGPT({
+            model: 'gpt-3.5-turbo',
+            token: '您在 OpenAI 上创建的访问令牌', // 替换为您的访问令牌
+            maxTokens: 100,
+        });
+
+        sendButton.addEventListener('click', async () => {
+            await sendMessage();
+        });
+
+        userInput.addEventListener('keydown', async (event) => {
+            if (event.key === 'Enter') {
+                await sendMessage();
+            }
+        });
+
+        async function sendMessage() {
+            const userMessage = userInput.value;
+            appendMessage(userMessage, 'user');
+            userInput.value = '';
+
+            const chatResult = await chatgpt.send(userMessage);
+            const botMessage = chatResult.choices[0].message.content;
+            appendMessage(botMessage, 'bot');
+        }
+
+        function appendMessage(message, sender) {
+            const messageContainer = document.createElement('div');
+            messageContainer.classList.add('message', sender);
+            messageContainer.textContent = message;
+            chatLog.appendChild(messageContainer);
+        }
+    </script>
+
+    <style>
+        #chat-container {
+            width: 400px;
+            margin: auto;
+            text-align: center;
+        }
+
+        .message {
+            margin: 10px;
+            padding: 10px;
+            border-radius: 5px;
+        }
+
+        .user {
+            background-color: #e0e0e0;
+        }
+
+        .bot {
+            background-color: #f2f2f2;
+        }
+    </style>
 </body>
 </html>
+ 
